force-app/main/default/objects/Invoice_Line_Item__c/fields/Attendee_List_Description__c.field-meta.xml
<CustomField>
    <fullName>Attendee_List_Description__c</fullName>
    <description>Stores json about attendees. Used for OSGOnline</description>
    <label>Attendee List Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>