force-app/main/default/objects/Invoice_Line_Item__c/fields/Description_Extended__c.field-meta.xml
<CustomField>
    <fullName>Description_Extended__c</fullName>
    <label>Description Extended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>