force-app/main/default/objects/Invoice_Line_Item__c/fields/Parent_line_item__c.field-meta.xml
<CustomField>
    <fullName>Parent_line_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Child Line Items</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>