force-app/main/default/objects/Invoice_Line_Item__c/fields/Revenue_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Account__c</fullName>
    <label>Revenue Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>