force-app/main/default/objects/Invoice_Line_Item__c/fields/SafeGuard__c.field-meta.xml
<CustomField>
    <fullName>SafeGuard__c</fullName>
    <formula>if(OR(
NOT(ISBLANK(Invoice__r.Intacct_ID__c))
), 
&quot;Can&apos;t delete this invoice line!&quot;,
&apos;&apos;)</formula>
    <label>SafeGuard</label>
    <type>Text</type>
</CustomField>