force-app/main/default/objects/Invoice_Line_Item__c/fields/Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission__c</fullName>
    <label>Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>