force-app/main/default/objects/Invoice_Line_Item__c/fields/Sales_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_User__c</fullName>
    <formula>Invoice__r.Sales_User__c</formula>
    <label>Sales User</label>
    <type>Text</type>
</CustomField>